--- a/mall/src/fonts/css/font.css
+++ b/mall/src/fonts/css/font.css
@@ -4,3 +4,9 @@
   font-weight: normal;
   font-style: normal;
 }
+@font-face {
+  font-family: 'yejing';
+  src:url('../yejing.ttf');
+  font-weight: normal;
+  font-style: normal;
+}
